--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,7 @@ body {
         sans-serif;
     --main-text-color: #212121;
     --background-of-team: #F5F4FA;
+    --contact-color-footer: rgba(255, 255, 255, 0.6);
 }
 
 .content {
@@ -36,7 +37,7 @@ body {
     font-family: var(--logo-font-family);
     font-weight: var(--premain-font-weight);
     font-size: 26px;
-    line-height: 31px;
+    line-height: 1.2;
     letter-spacing: 0.03em;
     color: var(--main-text-color);
 }
@@ -62,7 +63,7 @@ body {
     margin-right: 50px;
     font-weight: 500;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     letter-spacing: 0.02em;
     display: inline;
 }
@@ -89,6 +90,10 @@ body {
 .contacts-item {
     text-decoration: none;
     color: var(--contact-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
 
 .contacts-item:hover,
@@ -107,7 +112,7 @@ body {
 .main-header {
     font-weight: 900;
     font-size: 44px;
-    line-height: 60px;
+    line-height: 1.4;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--main-header-color);
@@ -121,7 +126,7 @@ body {
     border-radius: 4px;
     font-weight: var(--premain-font-weight);
     font-size: 16px;
-    line-height: 30px;
+    line-height: 1.8;
     color: var(--main-header-color);
 }
 
@@ -140,7 +145,7 @@ body {
 .table-items {
     font-weight: var(--premain-font-weight);
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14x;
     letter-spacing: 0.03em;
     text-transform: uppercase;
 
@@ -148,7 +153,7 @@ body {
 
 .description {
     font-size: 14px;
-    line-height: 24px;
+    line-height: 1.7;
     letter-spacing: 0.03em;
     color: var(--contact-color);
 }
@@ -175,7 +180,7 @@ body {
 .team-head {
     font-weight: var(--premain-font-weight);
     font-size: 36px;
-    line-height: 42px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
 }
 
@@ -194,20 +199,24 @@ body {
 .name {
     font-weight: 500;
     font-size: 16px;
-    line-height: 19px;
+    line-height: 1.2;
     text-align: center;
     letter-spacing: 0.03em;
 }
 
 .job-title {
     font-size: 16px;
-    line-height: 19px;
+    line-height: 1.2;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--contact-color);
 }
 
 /* footer */
+
+.lower-content {
+    background-color: var(--slider-background);
+}
 
 .content-logo {
     text-decoration: none;
@@ -221,9 +230,32 @@ body {
     font-family: var(--logo-font-family);
     font-weight: var(--premain-font-weight);
     font-size: 26px;
-    line-height: 31px;
+    line-height: 1.2;
     letter-spacing: 0.03em;
     color: var(--main-text-color);
+}
+
+.logo-studio {
+    color: var(--main-header-color);
+}
+
+.contacts-location {
+    text-decoration: none;
+    color: var(--main-header-color);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+}
+
+.contacts-item-lower {
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+    font-style: normal;
+    text-decoration: none;
+    color: var(--contact-color-footer);
 }
 
 /* portfolio */
@@ -237,10 +269,12 @@ body {
 
 .filter-button {
     cursor: pointer;
-    width: 145px;
-    height: 38px;
-    background: #F5F4FA;
+    background: var(--background-of-team);
     border-radius: 4px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.6;
+    letter-spacing: 0.03em;
 }
 
 .filter-button:hover,
@@ -264,13 +298,13 @@ body {
     font-style: normal;
     font-weight: var(--premain-font-weight);
     font-size: 18px;
-    line-height: 36px;
+    line-height: 2;
     letter-spacing: 0.06em;
 }
 
 .projects-item {
     font-size: 16px;
-    line-height: 30px;
+    line-height: 1.9;
     letter-spacing: 0.03em;
     color: var(--contact-color);
 }
