--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,10 +81,17 @@ body {
 .contacts {
     list-style-type: none;
     font-size: 14px;
+    padding: 0;
+    
 }
 
 .contacts-item-mail {
+    display: inline;
     margin-right: 50px;
+}
+
+.contacts-item-phone {
+    display: inline;
 }
 
 .contacts-item {
@@ -110,7 +117,7 @@ body {
     height: 600px;
     flex-direction: column;
     /* justify-content: center; */
-    align-items:center
+    align-items: center
 }
 
 .main-header {
@@ -175,6 +182,15 @@ body {
 
 /* section 3  */
 
+.occupation {
+    margin-top: 94px;
+    display: block;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .occupation-header {
     font-size: 36px;
     font-weight: var(--premain-font-weight);
@@ -184,12 +200,23 @@ body {
     list-style-type: none;
     display: flex;
     font-weight: var(--premain-font-weight);
+    padding: 0;
+}
+
+.box2 {
+    padding: 0 30px 0 30px;
 }
 
 /* section 4  */
 
 .team {
     background: var(--background-of-team);
+    margin-top: 94px;
+    padding-bottom: 94px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .team-head {
@@ -197,18 +224,28 @@ body {
     font-size: 36px;
     line-height: 1.17;
     letter-spacing: 0.03em;
+    padding: 94px 0 50px 0;
+    margin: 0;
+}
+
+.last-team-block {
+    margin-right: 0;
 }
 
 .team-members {
     list-style: none;
     display: flex;
+    margin: 0;
+    padding: 0;
 }
+
 
 .team-members-block {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    margin-right: 30px;
 }
 
 .name {
@@ -231,6 +268,11 @@ body {
 
 .lower-content {
     background-color: var(--slider-background);
+    height: 252px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
 }
 
 .content-logo {
@@ -240,7 +282,7 @@ body {
 .logo-footer {
     width: 145px;
     height: 31px;
-    left: 215px;
+    padding-left: 215px;
     top: 2157px;
     font-family: var(--logo-font-family);
     font-weight: var(--premain-font-weight);
@@ -252,6 +294,12 @@ body {
 
 .logo-studio {
     color: var(--main-header-color);
+}
+
+.company-location {
+    padding: 20px 0px 0px 215px;
+    width: 231px;
+    margin: 0;
 }
 
 .contacts-location {
